tests/NormalTests/paczka2/big_fuzzy/29705676.err
Error in line 2: S620 A788 11,0
Error in line 4: oZb S620 34,5
Error in line 16: SzbADtnk6 A788 141,3
Error in line 17: onqxUvbtUBY S642 36,9
Error in line 20: onqxUvbtUBY A788 92,7
Error in line 21: nNk A363 15,5
Error in line 28: B6BTeBv A363 85,9
Error in line 31: B6BTeBv A788 12,8
Error in line 38: oZb S642 3,3
Error in line 51: SzbADtnkz Sz20 1,9
Error in line 35: SzbADtnk6 A788 30,8
Error in line 54: nNk S620 16,7
Error in line 19: S620 S620 87,1
Error in line 57: SzbADtnk6 S620 6,8
Error in line 81: hLyIve1 A363 288,3
Error in line 88: oZb A363 370,25
Error in line 87: oZb A363 90,8
Error in line 85: onqxUvbtUBY S642 36,3
Error in line 101: onqxUvbtUBY A788 71,4
Error in line 95: SzbADtnk6 S620 95,3
Error in line 120: SzbADtnk6 S642 1,5
Error in line 117: onqxUvbtUBY S642 4,9
Error in line 133: oZb A363 -2,5
Error in line 86: S620 A788 37,2
Error in line 130: oZb A363 75,7
Error in line 150: nNk S642 4,1
Error in line 156: S620 A363 75,6
Error in line 165: SzbADtnk6 A363 49,2
Error in line 164: S620 S642 115,1
Error in line 178: onqxUvbtUBY A788 66,2
Error in line 175: oZb A363 54,7
Error in line 182: oZb S642 38,2
Error in line 209: B6BTeBv S620 64,6
Error in line 189: hLyIve1 S620 82,5
Error in line 212: SzbADtnk6 A363 91,1
Error in line 222: hLyIve1 S620 38,3
Error in line 227: hLyIve1 A788 90,4
Error in line 229: S620 A788 35,8
Error in line 232: S620 S620 63,8
Error in line 223: oZb S620 33,3
Error in line 235: onqxUvbtUBY S620 45,0
Error in line 240: oZb A363 92,3
